Allow public group discovery
